--- a/chat-widget.html
+++ b/chat-widget.html
@@ -45,10 +45,6 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
   backdrop-filter: blur(6px);
 }
 
-  .controls {
-  transition: transform 0.25s ease;
-}
-
 /* show */
 .chat-overlay.show{display:flex}
 
@@ -84,10 +80,18 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 }
 
 /* عناصر التحكم في الأسفل - نأخذ safe-area-inset-bottom */
-.controls{
-  padding:10px 12px  calc(12px + env(safe-area-inset-bottom,0px));
-  border-top:1px solid #eee;display:flex;flex-direction:column;gap:8px;flex-shrink:0;background:var(--card);
+.controls {
+  padding:10px 12px calc(20px + env(safe-area-inset-bottom,0px));
+  border-top:1px solid #eee;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  flex-shrink:0;
+  background:var(--card);
+  position:sticky;
+  bottom:0;
 }
+
 .input{display:flex;gap:8px;align-items:center}
 .input input{
   flex:1;padding:10px;border-radius:14px;border:1px solid #e6eef6;font-size:14px;min-width:0;
@@ -329,30 +333,6 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
       inp.value = e.target.dataset.text || '';
       inp.focus();
     }
-
-  // ===== حل مشكلة الكيبورد على الموبايل =====
-  const controls = document.querySelector('.controls');
-
-  function adjustForKeyboard() {
-    if (!window.visualViewport) return;
-    const vv = window.visualViewport;
-    const kbHeight = window.innerHeight - vv.height - vv.offsetTop;
-
-    if (kbHeight > 0) {
-      // الكيبورد ظاهر -> نرفع الـ controls فوقه
-      controls.style.transform = `translateY(-${kbHeight}px)`;
-    } else {
-      // الكيبورد مقفول -> نرجع للوضع الطبيعي
-      controls.style.transform = '';
-    }
-  }
-
-  if (window.visualViewport) {
-    window.visualViewport.addEventListener('resize', adjustForKeyboard);
-    window.visualViewport.addEventListener('scroll', adjustForKeyboard);
-  }
-
-    
   });
 
   // ensure that new messages keep visible on DOM changes (MutationObserver)
