--- a/chat-widget.html
+++ b/chat-widget.html
@@ -14,14 +14,14 @@
   --bot-bg:#fff8e6;
   --muted:#667085;
   --radius:16px;
-  --vh:1vh; /* سيتم تحديثه عبر JS */
+  --vh:1vh; /* سيتم تحديثه عبر JS ليتعامل مع شريط المتصفح */
 }
 
 /* reset */
 *{box-sizing:border-box;margin:0;padding:0;}
 html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;overflow:hidden}
 
-/* Floating button */
+/* Floating button (داخل الـ iframe) */
 .chat-fab {
   position:fixed;
   bottom:calc(20px + env(safe-area-inset-bottom, 0px));
@@ -36,7 +36,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 .chat-fab:hover{transform:scale(1.05)}
 .chat-fab.hidden{opacity:0;pointer-events:none}
 
-/* overlay full screen */
+/* overlay full screen (تحسب ارتفاع ديناميكيًا) */
 .chat-overlay {
   position:fixed;inset:0;
   display:none;align-items:center;justify-content:center;
@@ -44,9 +44,11 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
 }
+
+/* show */
 .chat-overlay.show{display:flex}
 
-/* chat box */
+/* صندوق الشات - نستخدم vh ديناميكي */
 .chat-box {
   width:100%;
   height:calc(var(--vh) * 100);
@@ -58,7 +60,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
   box-shadow:0 10px 30px rgba(2,6,23,0.12);
 }
 
-/* header */
+/* الهيدر: نأخذ في الحسبان safe-area-inset-top حتى لا يختفي تحت شريط المتصفح */
 .header {
   background:linear-gradient(90deg,var(--accent),var(--accent-2));
   color:#fff;padding:12px 12px;
@@ -69,7 +71,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 .header .title{flex:1;font-weight:700;font-size:16px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .header .close{cursor:pointer;font-size:28px;background:none;border:none;color:#fff;width:36px;height:36px;display:flex;align-items:center;justify-content:center;padding:0}
 
-/* area */
+/* المحتوى قابل للتمرير (ونعطيه min-height:0 لتفادي مشاكل flex-scroll) */
 .area{
   flex:1; padding:12px; overflow-y:auto; overflow-x:hidden;
   display:flex;flex-direction:column;gap:8px;min-height:0;
@@ -77,9 +79,9 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
   scroll-behavior:smooth;
 }
 
-/* controls */
+/* عناصر التحكم في الأسفل - نأخذ safe-area-inset-bottom */
 .controls{
-  padding:10px 12px calc(12px + env(safe-area-inset-bottom,0px));
+  padding:10px 12px  calc(12px + env(safe-area-inset-bottom,0px));
   border-top:1px solid #eee;display:flex;flex-direction:column;gap:8px;flex-shrink:0;background:var(--card);
 }
 .input{display:flex;gap:8px;align-items:center}
@@ -90,7 +92,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 .quick{display:flex;gap:8px;flex-wrap:wrap}
 .quick button{padding:8px;border-radius:12px;border:1px dashed #ccc;background:transparent;font-size:13px;cursor:pointer;color:var(--accent)}
 
-/* messages */
+/* الرسائل */
 .msg{display:flex;max-width:85%;flex-direction:column;word-break:break-word}
 .msg.user{align-self:flex-end}
 .msg.user .bubble{background:var(--user-bg);border-radius:16px 16px 0 16px;padding:10px 14px}
@@ -98,13 +100,13 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 .msg.bot .bubble{background:var(--bot-bg);border-radius:16px 16px 16px 0;padding:10px 14px}
 .meta{font-size:11px;color:var(--muted);margin-top:4px;text-align:right}
 
-/* typing */
+/* typing animation */
 .typing span{width:6px;height:6px;background:var(--muted);border-radius:50%;display:inline-block;animation:dot 1s infinite}
 .typing span:nth-child(2){animation-delay:.18s}
 .typing span:nth-child(3){animation-delay:.36s}
 @keyframes dot{0%,100%{opacity:.3;transform:translateY(0)}50%{opacity:1;transform:translateY(-4px)}}
 
-/* responsive */
+/* responsive tweaks */
 @media (min-width:700px){
   .chat-box{width:640px;border-radius:14px}
   .chat-fab{right:28px;bottom:28px}
@@ -112,10 +114,10 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 </style>
 </head>
 <body>
-<!-- Floating button -->
+<!-- Floating button داخل الـ iframe -->
 <div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">💬</div>
 
-<!-- Overlay -->
+<!-- Overlay الشات -->
 <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
   <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
     <div class="header">
@@ -144,20 +146,16 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 (function(){
   'use strict';
 
-  // ===== تحديث vh ديناميكي باستخدام visualViewport =====
+  // ====== إعداد vh ديناميكي لمشاكل شريط المتصفح على الموبايل ======
   function setVh(){
-    const h = window.visualViewport ? window.visualViewport.height : window.innerHeight;
-    document.documentElement.style.setProperty('--vh', (h * 0.01) + 'px');
-  }
-  setVh();
-  if(window.visualViewport){
-    window.visualViewport.addEventListener('resize', setVh);
-    window.visualViewport.addEventListener('scroll', setVh);
+    // use window.innerHeight to account for browser chrome (address bar)
+    document.documentElement.style.setProperty('--vh', (window.innerHeight * 0.01) + 'px');
   }
   window.addEventListener('resize', setVh);
-  window.addEventListener('orientationchange', ()=> setTimeout(setVh,300));
+  window.addEventListener('orientationchange', function(){ setTimeout(setVh,300); });
+  setVh();
 
-  // ===== عناصر =====
+  // ===== عناصر الواجهة =====
   const openBtn = document.getElementById('openChat');
   const overlay = document.getElementById('chatOverlay');
   const closeBtn = document.getElementById('closeChat');
@@ -166,9 +164,13 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
   const btn = document.getElementById('btn');
   const quick = document.getElementById('quickActions');
 
+  // Worker URL - اتركه كما كان أو عدّله لو لزم
   const WORKER_URL = 'https://kawkab.kawkab-arabia.workers.dev/';
+
+  // حالة سريعة
   let historyMessages = [], chatOpened = false, finalized = false;
 
+  // إرسال رسالة للأب (parent) عند الفتح/الإغلاق - ليتعامل الـ parent مع overflow
   function postToParent(action){
     try{
       if(window.parent && window.parent !== window){
@@ -177,6 +179,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
     }catch(e){}
   }
 
+  // Append message ثم تأكد من الـ scrolling بشكل صحيح (نستخدم scrollIntoView)
   function safeText(s){
     const d = document.createElement('div');
     d.textContent = s;
@@ -192,73 +195,108 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
     w.appendChild(b);
     const m = document.createElement('div');
     m.className = 'meta';
+    // use 24-hour H:M without seconds
     const now = new Date();
     const time = now.toLocaleTimeString('ar-EG', {hour:'2-digit', minute:'2-digit'});
     m.textContent = time;
     w.appendChild(m);
     area.appendChild(w);
-    requestAnimationFrame(()=> w.scrollIntoView({behavior:'smooth', block:'nearest'}));
+
+    // scroll new message into view safely
+    // use requestAnimationFrame to ensure layout updated
+    requestAnimationFrame(()=>{
+      try{
+        // prefer scrollIntoView to avoid messages going out of viewport
+        w.scrollIntoView({behavior:'smooth', block:'nearest'});
+      }catch(e){
+        area.scrollTop = area.scrollHeight - area.clientHeight;
+      }
+    });
   }
 
+  // show typing indicator element (returns element to remove later)
   function showTyping(){
     const el = document.createElement('div');
     el.className = 'msg bot';
     el.innerHTML = '<div class="bubble"><div class="typing" aria-hidden="true"><span></span><span></span><span></span></div></div>';
     area.appendChild(el);
+    // ensure visible
     requestAnimationFrame(()=> el.scrollIntoView({behavior:'smooth', block:'nearest'}));
     return el;
   }
 
-  // ===== Scroll input فوق الكيبورد =====
+  // auto-scroll when keyboard opens or input focused
   inp.addEventListener('focus', ()=> {
-    setTimeout(()=> inp.scrollIntoView({behavior:"smooth", block:"center"}), 400);
+    // small timeout so that mobile keyboard resize finishes
+    setTimeout(()=> {
+      // scroll last message or area to bottom
+      if(area.lastElementChild) area.lastElementChild.scrollIntoView({behavior:'smooth', block:'nearest'});
+    }, 300);
   });
 
-  // open/close
+  // also monitor viewport changes (mobile keyboard show/hide)
+  let lastInnerHeight = window.innerHeight;
+  setInterval(()=> {
+    if(Math.abs(window.innerHeight - lastInnerHeight) > 120){
+      // big change -> probably keyboard open/close -> recalc vh and scroll
+      lastInnerHeight = window.innerHeight;
+      setVh();
+      if(area.lastElementChild) area.lastElementChild.scrollIntoView({behavior:'smooth', block:'nearest'});
+    }
+  }, 300);
+
+  // init messages when first open
   function openChat(){
     overlay.classList.add('show');
-    overlay.setAttribute('aria-hidden','false');
+    overlay.setAttribute('aria-hidden', 'false');
     openBtn.classList.add('hidden');
     if(!chatOpened){
       append('bot', 'أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيه؟ 😎');
       chatOpened = true;
     }
     postToParent('chatOpened');
+    // focus input after open
     setTimeout(()=> inp.focus(), 400);
   }
 
   function closeChat(){
     overlay.classList.remove('show');
-    overlay.setAttribute('aria-hidden','true');
+    overlay.setAttribute('aria-hidden', 'true');
     openBtn.classList.remove('hidden');
     postToParent('chatClosed');
+    // return focus to fab
     setTimeout(()=> openBtn.focus(), 200);
   }
 
+  // send payload to worker
   async function sendToWorker(payload){
     try{
       const res = await fetch(WORKER_URL, {
-        method:'POST',
-        headers:{'Content-Type':'application/json'},
-        body:JSON.stringify(payload),
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify(payload),
       });
       return res;
-    }catch(e){throw e;}
+    }catch(e){
+      throw e;
+    }
   }
 
+  // send message flow
   async function sendMessage(){
     const txt = inp.value.trim();
     if(!txt || finalized) return;
     append('user', txt);
     inp.value = '';
     const typing = showTyping();
-    btn.disabled = true; inp.disabled = true;
+    btn.disabled = true;
+    inp.disabled = true;
 
     try{
       const res = await sendToWorker({messages: historyMessages.concat([{role:'user', content: txt}])});
       typing.remove();
       if(!res || !res.ok){
-        append('bot','النت فاصل ولا في مشكلة في السيرفر 😅');
+        append('bot', 'النت فاصل ولا في مشكلة في السيرفر 😅');
       } else {
         const j = await res.json().catch(()=> ({}));
         const reply = j.text || j.reply || 'مش فاهمك قوي 😅 جرب تاني';
@@ -266,20 +304,108 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
         historyMessages.push({role:'user', content: txt}, {role:'assistant', content: reply});
       }
     }catch(e){
-      typing.remove();
-      append('bot','النت فاصل ولا إيه؟ 😅');
-    }finally{
-      btn.disabled = false; inp.disabled = false; inp.focus();
+      try{ typing.remove(); }catch(_){}
+      append('bot', 'النت فاصل ولا إيه؟ 😅');
+    } finally {
+      btn.disabled = false;
+      inp.disabled = false;
+      inp.focus();
     }
   }
 
+  // Events
   openBtn.addEventListener('click', openChat);
   closeBtn.addEventListener('click', closeChat);
+
   btn.addEventListener('click', sendMessage);
-  inp.addEventListener('keydown', e=> { if(e.key==='Enter') sendMessage(); });
-  quick.addEventListener('click', e=> {
-    if(e.target.tagName==='BUTTON'){ inp.value = e.target.dataset.text || ''; inp.focus(); }
+  inp.addEventListener('keydown', (e)=> { if(e.key === 'Enter') sendMessage(); });
+
+  quick.addEventListener('click', (e)=> {
+    if(e.target.tagName === 'BUTTON'){
+      inp.value = e.target.dataset.text || '';
+      inp.focus();
+    }
   });
+
+  // ensure that new messages keep visible on DOM changes (MutationObserver)
+  const mo = new MutationObserver((mutations)=> {
+    // if user is near bottom, keep auto-scrolling
+    const threshold = 120;
+    const nearBottom = (area.scrollHeight - area.scrollTop - area.clientHeight) < threshold;
+    if(nearBottom){
+      // scroll last child into view
+      const last = area.lastElementChild;
+      if(last) last.scrollIntoView({behavior:'smooth', block:'nearest'});
+    }
+  });
+  mo.observe(area, {childList:true, subtree:false});
+
+  // listen to parent messages in case parent decides to force-close or adjust
+  window.addEventListener('message', (ev)=> {
+    if(!ev.data || typeof ev.data.action !== 'string') return;
+    if(ev.data.action === 'closeChat'){
+      closeChat();
+    }
+    // parent could also send focus commands
+    if(ev.data.action === 'focusInput'){
+      if(overlay.classList.contains('show')) setTimeout(()=> inp.focus(), 200);
+    }
+  });
+
+  // Accessibility: close on Escape
+  window.addEventListener('keydown', (e)=> {
+    if(e.key === 'Escape' && overlay.classList.contains('show')){
+      closeChat();
+    }
+  });
+
+  // Prevent accidental page scroll inside iframe when overlay open (best-effort)
+  overlay.addEventListener('touchmove', (e)=> {
+    // allow internal scrolling but prevent parent scrolling
+    e.stopPropagation();
+  }, {passive:false});
+
+  // initial small check to ensure area is scrolled to bottom if any preloaded content exists
+  setTimeout(()=> {
+    if(area.lastElementChild) area.lastElementChild.scrollIntoView({block:'nearest'});
+  }, 200);
+
+  // expose a small debug for parent if needed
+  window.__KAWKAB_CHAT = {
+    open: openChat,
+    close: closeChat,
+    sendMessageText: (t)=> { inp.value = t; sendMessage(); }
+  };
+// ======== تعديل وضع الـ input لما الكيبورد يفتح على الموبايل ========
+let initialHeight = window.innerHeight;
+
+window.addEventListener('resize', () => {
+  const currentHeight = window.innerHeight;
+
+  // فرق كبير = الكيبورد اتفتح
+  if (initialHeight - currentHeight > 150) {
+    document.body.classList.add('keyboard-open');
+    const controls = document.querySelector('.controls');
+    if (controls) {
+      // ارفع الكنترولز فوق شريط النظام (حسب الارتفاع الجديد)
+      controls.style.position = 'absolute';
+      controls.style.bottom = '0';
+      controls.style.width = '100%';
+      controls.style.background = 'var(--card)';
+    }
+  } else {
+    // الكيبورد اتقفل
+    document.body.classList.remove('keyboard-open');
+    const controls = document.querySelector('.controls');
+    if (controls) {
+      controls.style.position = '';
+      controls.style.bottom = '';
+      controls.style.width = '';
+      controls.style.background = '';
+    }
+  }
+});
+
 })();
 </script>
 </body>
