--- a/chat-widget.html
+++ b/chat-widget.html
@@ -121,7 +121,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
   <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
     <div class="header">
-      <div class="title">بوت كوكب — فصال مباشر</div>
+      <div class="title">بوت كوكب1 — فصال مباشر</div>
       <button class="close" id="closeChat" aria-label="اغلاق">×</button>
     </div>
 
