--- a/chat-widget.html
+++ b/chat-widget.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-<title>بوت كوكب3 — فصال مباشر</title>
+<title>بوت كوكب — فصال مباشر</title>
 <style>
 :root{
   --accent:#0f1724;
@@ -121,7 +121,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
   <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
     <div class="header">
-      <div class="title">بوت كوكب1 — فصال مباشر</div>
+      <div class="title">بوت كوكب — فصال مباشر</div>
       <button class="close" id="closeChat" aria-label="اغلاق">×</button>
     </div>
 
@@ -129,7 +129,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 
     <div class="controls">
       <div class="quick" id="quickActions" aria-hidden="false">
-        <button data-text="أريد أفضل عرض">أفضل عرض</button>
+        <button data-text="أريد أفضل عرض">أفضل عــــرض</button>
         <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
         <button data-text="تمام">تمام</button>
       </div>
