--- a/chat-widget.html
+++ b/chat-widget.html
@@ -129,7 +129,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 
     <div class="controls">
       <div class="quick" id="quickActions" aria-hidden="false">
-        <button data-text="أريد أفضل عرض">أفضل عــــرض</button>
+        <button data-text="أريد أفضل عــــرض">أفضل عــــرض</button>
         <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
         <button data-text="تمام">تمام</button>
       </div>
