--- a/chat-widget.html
+++ b/chat-widget.html
@@ -129,7 +129,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 
     <div class="controls">
       <div class="quick" id="quickActions" aria-hidden="false">
-        <button data-text="أريد أفضل عــــرض">أفضل عــــرض</button>
+        <button data-text="أريد أفضل عرض">أفضل عرض</button>
         <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
         <button data-text="تمام">تمام</button>
       </div>
@@ -251,7 +251,7 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
     overlay.setAttribute('aria-hidden', 'false');
     openBtn.classList.add('hidden');
     if(!chatOpened){
-      append('bot', 'أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيه؟ 😎');
+      append('bot', 'أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيــــــــه؟ 😎');
       chatOpened = true;
     }
     postToParent('chatOpened');
