--- a/chat-widget.html
+++ b/chat-widget.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
 <title>بوت كوكب — فصال مباشر</title>
 <style>
-/* **تعديل الثيم (نقطة 1)** */
+/* 1. تعديل الثيم إلى أسود وأبيض */
 :root{
---accent:#000000; /* أسود للهيد */
---accent-2:#333333; /* رمادي غامق ثانوي */
+--accent:#111111; /* أسود للهيد والبوتون */
+--accent-2:#444444; /* رمادي غامق لـ gradient */
 --bg:#f7fbff;
 --card:#ffffff;
---user-bg:#000000; /* رسالة المستخدم أسود */
+--user-bg:#111111; /* أسود لرسالة المستخدم */
 --user-text:#ffffff;
---bot-bg:#eeeeee; /* رسالة البوت رمادي فاتح */
+--bot-bg:#f0f0f0; /* رمادي فاتح لرسالة البوت */
 --bot-text:#1f2937;
 --muted:#667085;
 --radius:16px;
@@ -23,20 +23,22 @@
 *{box-sizing:border-box;margin:0;padding:0;}
 html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;overflow:hidden}
 
-/* **تعديل أيقونة الفاب (نقطة 6)** */
+/* 4. تعديل موقع الـ FAB ليكون أعلى (50px) */
 .chat-fab {
 position:fixed;
-bottom:calc(20px + env(safe-area-inset-bottom, 0px));
+bottom:calc(50px + env(safe-area-inset-bottom, 0px)); /* تم التعديل من 20px إلى 50px */
 right:20px;
 z-index:9999;
 width:60px;height:60px;border-radius:50%;
-background:var(--accent); /* أسود */
-display:flex;align-items:center;justify-content:center;
-color:#fff;
-font-size:18px; /* تصغير ليتسع لنص "فصال" */
-font-weight:700;
-cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.4);
+background:linear-gradient(135deg,var(--accent-2),var(--accent));
+display:flex;align-items:center;justify-content:center;color:#fff;font-size:18px; /* تصغير الخط ليتسع لكلمة "فصال" */
+cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.4); /* ظل أسود */
 transition:transform .25s,opacity .25s;
+font-weight:700; /* جعل الخط سميك */
+}
+/* 3. إظهار كلمة "فصال" وشيل رمز المحادثة */
+.chat-fab::before {
+content: 'فصال';
 }
 .chat-fab:hover{transform:scale(1.05)}
 .chat-fab.hidden{opacity:0;pointer-events:none}
@@ -67,9 +69,9 @@ grid-template-rows: auto 1fr auto;
 overflow:hidden;
 }
 
-/* **تعديل الهيدر (نقطة 1)** */
+/* تعديل هيدر أسود وجواه أبيض */
 .header {
-background:var(--accent); /* أسود */
+background:linear-gradient(135deg,var(--accent),var(--accent-2));
 color:#fff;
 padding:16px 12px;
 padding-top:calc(16px + env(safe-area-inset-top,0px));
@@ -88,7 +90,7 @@ display:flex;
 align-items:center;
 gap:8px;
 }
-.header .title::before{content:'💬'} /* رمز المحادثة في الهيدر */
+.header .title::before{content:'💬'} /* الرمز هنا مازال موجود */
 .header .close{
 cursor:pointer;
 font-size:26px;
@@ -122,7 +124,8 @@ scroll-behavior:smooth;
 background:#ffffff;
 border-top:1px solid #e5e7eb;
 padding:12px;
-padding-bottom:calc(12px + env(safe-area-inset-bottom, 0px)); /* تحسين للهواتف الحديثة */
+/* تقليل البادينج السفلي على الموبايل والاعتماد على السكربت لإظهاره فوق الكيبورد */
+padding-bottom:calc(12px + env(safe-area-inset-bottom, 0px));
 display:flex;
 flex-direction:column;
 gap:10px;
@@ -183,14 +186,14 @@ transition:border-color .2s, box-shadow .2s;
 }
 .input input:focus{
 outline:none;
-border-color:var(--accent); /* أسود عند التركيز */
-box-shadow:0 0 0 3px rgba(0,0,0,0.1);
+border-color:var(--accent); /* التركيز على لون الهوية الجديد */
+box-shadow:0 0 0 3px rgba(17,17,17,0.1);
 }
 .btn{
 padding:12px 24px;
 border-radius:24px;
 border:none;
-background:var(--accent); /* أسود */
+background:linear-gradient(135deg,var(--accent-2),var(--accent));
 color:#fff;
 cursor:pointer;
 font-weight:600;
@@ -224,8 +227,8 @@ font-weight:500;
 transition:all .2s;
 }
 .quick button:hover{
-border-color:var(--accent); /* أسود عند التحويم */
-background:#f0fdfa;
+border-color:var(--accent-2);
+background:#f0f0f0; /* خلفية hover فاتحة */
 transform:translateY(-1px);
 }
 
@@ -241,26 +244,26 @@ from{opacity:0;transform:translateY(10px)}
 to{opacity:1;transform:translateY(0)}
 }
 
-/* رسالة المستخدم - يمين */
+/* رسالة المستخدم - يمين - أسود */
 .msg.user{
 align-self:flex-end;
 align-items:flex-end;
 }
 .msg.user .bubble{
-background:var(--user-bg); /* أسود */
+background:linear-gradient(135deg,var(--accent-2),var(--accent));
 color:var(--user-text);
 border-radius:18px 18px 4px 18px;
 padding:12px 16px;
 box-shadow:var(--shadow);
 }
 
-/* رسالة البوت - شمال */
+/* رسالة البوت - شمال - رمادي فاتح */
 .msg.bot{
 align-self:flex-start;
 align-items:flex-start;
 }
 .msg.bot .bubble{
-background:var(--bot-bg); /* رمادي فاتح */
+background:var(--bot-bg);
 color:var(--bot-text);
 border-radius:18px 18px 18px 4px;
 padding:12px 16px;
@@ -338,13 +341,13 @@ max-height:800px;
 border-radius:16px;
 box-shadow:0 20px 60px rgba(0,0,0,0.3);
 }
-.chat-fab{right:28px;bottom:28px}
+.chat-fab{right:28px;bottom:58px} /* رفع الـ FAB في الديسكتوب أيضاً */
 }
 </style>
 </head>
 <body>
 
-<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">فصال</div>
+<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات"></div>
 
 <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
 <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
@@ -391,8 +394,7 @@ const WORKER_URL = 'https://kawkab.kawkab-arabia.workers.dev/';
 let historyMessages = [], chatOpened = false, finalized = false;
 let timerInterval = null;
 let timeRemaining = 60;
-let isFirstBotReply = true; // **جديد (نقطة 2):** لتشغيل المؤقت بعد أول رد
-let lastOfficialDiscount = 0; // **جديد (نقطة 3):** لتخزين آخر خصم رسمي
+let finalDiscount = null; // لتخزين آخر خصم تم ذكره بواسطة البوت
 
 function postToParent(action){
 try{
@@ -419,8 +421,25 @@ const w = document.createElement('div');
 w.className = 'msg ' + (who === 'user' ? 'user' : 'bot');
 const b = document.createElement('div');
 b.className = isResult ? 'result-msg' : 'bubble';
+
+// 3. تخزين قيمة الخصم الأخيرة إذا تم ذكرها في رسالة البوت
+if(who === 'bot' && !isResult){
+const match = text.match(/(\d+%)/); // البحث عن أي نسبة مئوية (مثال: 15%)
+if(match){
+// يتم تخزين النص ككل، ويمكن معالجته لاحقا لاستخراج الرقم فقط
+finalDiscount = match[1];
+}
+}
+
 if(isResult){
-b.innerHTML = `<div class="result-title">🎉 مبروك! خصمك النهائي</div><div class="result-value">${safeText(text)}</div>`;
+// 3. تطبيق الخصم النهائي
+let discountValue;
+if(finalDiscount){
+discountValue = finalDiscount; // استخدام آخر خصم ذكره البوت
+} else {
+discountValue = '5%'; // الخصم الافتراضي إذا لم يذكر البوت خصمًا
+}
+b.innerHTML = `<div class="result-title">🎉 مبروك! خصمك النهائي</div><div class="result-value">${safeText(discountValue)}</div>`;
 } else {
 b.innerHTML = safeText(text);
 }
@@ -446,6 +465,7 @@ scrollToBottom();
 return el;
 }
 
+// 2. تعديل لبدء العداد
 function startTimer(){
 if(timerInterval) return;
 timeRemaining = 60;
@@ -469,7 +489,8 @@ timerInterval = null;
 timerContainer.classList.remove('active');
 }
 
-async function finalize(){
+// 3. تعديل دالة الخصم النهائي
+function finalize(){
 if(finalized) return;
 finalized = true;
 stopTimer();
@@ -477,54 +498,35 @@ btn.disabled = true;
 inp.disabled = true;
 quick.style.display = 'none';
 
-// **تعديل (نقطة 3):** حساب الخصم النهائي
-// إذا كان آخر خصم رسمي > 0، نستخدمه، وإلا نستخدم 5% كحد أدنى.
-const finalDiscount = lastOfficialDiscount > 0 ? lastOfficialDiscount : 5;
-
-// **جديد:** طلب التبرير من الـ Worker للخصم النهائي
-let reason = 'خصم مميز ليك عشان خاطر كوكب!';
-
-try {
-  const res = await sendToWorker({
-    messages: historyMessages,
-    finalize: true,
-    percent_override: finalDiscount
-  });
-  if(res && res.ok){
-    const j = await res.json().catch(()=> ({}));
-    reason = j.reason || reason;
-  }
-} catch (e) {
-  // تجاهل الخطأ واستخدم التبرير الافتراضي
-}
+let finalMsg = finalDiscount ?
+`شكراً ليك! تم حفظ عرض ${finalDiscount} وهنتواصل معاك قريب جداً 🎊` :
+'شكراً ليك! تم حفظ عرض 5% (الخصم الافتراضي) وهنتواصل معاك قريب جداً 🎊';
 
 setTimeout(()=>{
-  append('bot', `${finalDiscount}%`, true);
-  setTimeout(()=>{
-    append('bot', `شكراً ليك! ${reason} تم حفظ العرض وهنتواصل معاك قريب جداً 🎊`);
-  }, 1000);
+append('bot', finalDiscount || '5%', true); // عرض النتيجة النهائية
+setTimeout(()=>{
+append('bot', finalMsg);
+}, 1000);
 }, 500);
 }
 
-// **تحسين (نقطة 5):** التأكد من ظهور الـ input لما يفتح الكيبورد
+// 5. التأكد من ظهور الـ input لما يفتح الكيبورد
+// تم تعديل هذا الجزء في الـ CSS و هنا لضمان عمله
 inp.addEventListener('focus', ()=>{
-// تأخير بسيط لانتهاء ظهور الكيبورد
 setTimeout(()=>{
-  const controls = document.querySelector('.controls');
-  if(controls){
-    // التركيز على الـ controls ليكون أعلى الكيبورد
-    controls.scrollIntoView({behavior:'smooth', block:'end'});
-  }
+// لا حاجة لـ scrollIntoView هنا في أغلب المتصفحات الحديثة بسبب الـ viewport-fit=cover
+// ولكن نتركها كاحتياط
+area.scrollTop = area.scrollHeight; // Scroll to bottom on focus
 }, 300);
 });
 
-// مراقبة تغيير حجم الشاشة (الكيبورد)
+// 5. مراقبة تغيير حجم الشاشة (الكيبورد)
 if(window.visualViewport){
 window.visualViewport.addEventListener('resize', ()=>{
-  // عند تغيير الحجم (ظهور/اختفاء الكيبورد) نمرر للأسفل
-  setTimeout(()=>{
-    scrollToBottom();
-  }, 100);
+// تأكد من أن منطقة الرسائل تتحرك لتجنب حجبها
+setTimeout(()=>{
+area.scrollTop = area.scrollHeight;
+}, 100);
 });
 }
 
@@ -533,15 +535,16 @@ overlay.classList.add('show');
 overlay.setAttribute('aria-hidden', 'false');
 openBtn.classList.add('hidden');
 if(!chatOpened){
-  // **تعديل (نقطة 2):** الرد الترحيبي الأول لا يشغل المؤقت
-  append('bot', 'أهلاً بيك في بوت كوكب! 🎉 قولّي إنت عايز تفاوض على إيه؟ 😎');
-  chatOpened = true;
-  // **المؤقت سيبدأ بعد أول رد من البوت في sendMessage**
+// 2. لا تبدأ العداد هنا
+append('bot', 'أهلاً بيك في بوت كوكب! 🎉 قولّي إنت عايز تفاوض على إيه؟ 😎');
+// 2. ابدأ العداد بعد رسالة البوت الأولى
+startTimer();
+chatOpened = true;
 }
 postToParent('chatOpened');
 setTimeout(()=>{
-  scrollToBottom();
-  inp.focus();
+scrollToBottom();
+inp.focus();
 }, 400);
 }
 
@@ -556,14 +559,14 @@ setTimeout(()=> openBtn.focus(), 200);
 
 async function sendToWorker(payload){
 try{
-  const res = await fetch(WORKER_URL, {
-    method: 'POST',
-    headers: {'Content-Type':'application/json'},
-    body: JSON.stringify(payload),
-  });
-  return res;
+const res = await fetch(WORKER_URL, {
+method: 'POST',
+headers: {'Content-Type':'application/json'},
+body: JSON.stringify(payload),
+});
+return res;
 }catch(e){
-  throw e;
+throw e;
 }
 }
 
@@ -574,8 +577,8 @@ append('user', txt);
 inp.value = '';
 
 if(isFinal){
-  finalize();
-  return;
+finalize();
+return;
 }
 
 const typing = showTyping();
@@ -583,42 +586,23 @@ btn.disabled = true;
 inp.disabled = true;
 
 try{
-  // **تعديل:** إرسال آخر خصم رسمي للـ Worker
-  const payload = {
-    messages: historyMessages.concat([{role:'user', content: txt}]),
-    last_official_discount: lastOfficialDiscount // لإبلاغ الموديل بآخر عرض
-  };
-  const res = await sendToWorker(payload);
-  typing.remove();
-
-  if(!res || !res.ok){
-    append('bot', 'النت فاصل ولا في مشكلة في السيرفر 😅');
-  } else {
-    const j = await res.json().catch(()=> ({}));
-    const reply = j.text || j.reply || 'مش فاهمك قوي 😅 جرب تاني';
-    const newDiscount = j.last_official_discount;
-
-    // **جديد (نقطة 3):** تحديث آخر خصم رسمي
-    if (Number.isFinite(newDiscount)) {
-      lastOfficialDiscount = newDiscount;
-    }
-
-    append('bot', reply);
-    historyMessages.push({role:'user', content: txt}, {role:'assistant', content: reply});
-
-    // **جديد (نقطة 2):** تشغيل المؤقت بعد أول رد للبوت
-    if(isFirstBotReply){
-      startTimer();
-      isFirstBotReply = false;
-    }
-  }
+const res = await sendToWorker({messages: historyMessages.concat([{role:'user', content: txt}])});
+typing.remove();
+if(!res || !res.ok){
+append('bot', 'النت فاصل ولا في مشكلة في السيرفر 😅');
+} else {
+const j = await res.json().catch(()=> ({}));
+const reply = j.text || j.reply || 'مش فاهمك قوي 😅 جرب تاني';
+append('bot', reply);
+historyMessages.push({role:'user', content: txt}, {role:'assistant', content: reply});
+}
 }catch(e){
-  try{ typing.remove(); }catch(_){}
-  append('bot', 'النت فاصل ولا إيه؟ 😅');
+try{ typing.remove(); }catch(_){}
+append('bot', 'النت فاصل ولا إيه؟ 😅');
 } finally {
-  btn.disabled = false;
-  inp.disabled = false;
-  inp.focus();
+btn.disabled = false;
+inp.disabled = false;
+inp.focus();
 }
 }
 
@@ -631,12 +615,12 @@ if(e.key === 'Enter') sendMessage();
 
 quick.addEventListener('click', (e)=>{
 if(e.target.tagName === 'BUTTON'){
-  const text = e.target.dataset.text || '';
-  const isFinal = e.target.dataset.finalize === 'true';
-  inp.value = text;
-  if(text){
-    sendMessage(isFinal);
-  }
+const text = e.target.dataset.text || '';
+const isFinal = e.target.dataset.finalize === 'true';
+inp.value = text;
+if(text){
+sendMessage(isFinal);
+}
 }
 });
 
@@ -644,7 +628,7 @@ window.addEventListener('message', (ev)=>{
 if(!ev.data || typeof ev.data.action !== 'string') return;
 if(ev.data.action === 'closeChat') closeChat();
 if(ev.data.action === 'focusInput'){
-  if(overlay.classList.contains('show')) setTimeout(()=> inp.focus(), 200);
+if(overlay.classList.contains('show')) setTimeout(()=> inp.focus(), 200);
 }
 });
 
@@ -660,8 +644,8 @@ window.__KAWKAB_CHAT = {
 open: openChat,
 close: closeChat,
 sendMessageText: (t)=>{
-  inp.value = t;
-  sendMessage();
+inp.value = t;
+sendMessage();
 }
 };
 })();
