--- a/chat-widget.html
+++ b/chat-widget.html
@@ -5,15 +5,14 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
 <title>بوت كوكب — فصال مباشر</title>
 <style>
-/* 1. تعديل الثيم إلى أسود وأبيض */
 :root{
---accent:#111111; /* أسود للهيد والبوتون */
---accent-2:#444444; /* رمادي غامق لـ gradient */
+--accent:#1a1a1a;
+--accent-2:#2d2d2d;
 --bg:#f7fbff;
 --card:#ffffff;
---user-bg:#111111; /* أسود لرسالة المستخدم */
+--user-bg:#1a1a1a;
 --user-text:#ffffff;
---bot-bg:#f0f0f0; /* رمادي فاتح لرسالة البوت */
+--bot-bg:#f3f4f6;
 --bot-text:#1f2937;
 --muted:#667085;
 --radius:16px;
@@ -23,22 +22,16 @@
 *{box-sizing:border-box;margin:0;padding:0;}
 html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;overflow:hidden}
 
-/* 4. تعديل موقع الـ FAB ليكون أعلى (50px) */
 .chat-fab {
 position:fixed;
-bottom:calc(50px + env(safe-area-inset-bottom, 0px)); /* تم التعديل من 20px إلى 50px */
+bottom:calc(20px + env(safe-area-inset-bottom, 0px));
 right:20px;
 z-index:9999;
 width:60px;height:60px;border-radius:50%;
-background:linear-gradient(135deg,var(--accent-2),var(--accent));
-display:flex;align-items:center;justify-content:center;color:#fff;font-size:18px; /* تصغير الخط ليتسع لكلمة "فصال" */
-cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.4); /* ظل أسود */
+background:linear-gradient(135deg,#2d2d2d,#1a1a1a);
+display:flex;align-items:center;justify-content:center;color:#fff;font-size:26px;
+cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.3);
 transition:transform .25s,opacity .25s;
-font-weight:700; /* جعل الخط سميك */
-}
-/* 3. إظهار كلمة "فصال" وشيل رمز المحادثة */
-.chat-fab::before {
-content: 'فصال';
 }
 .chat-fab:hover{transform:scale(1.05)}
 .chat-fab.hidden{opacity:0;pointer-events:none}
@@ -69,28 +62,27 @@ grid-template-rows: auto 1fr auto;
 overflow:hidden;
 }
 
-/* تعديل هيدر أسود وجواه أبيض */
 .header {
-background:linear-gradient(135deg,var(--accent),var(--accent-2));
+background:linear-gradient(135deg,#1a1a1a,#2d2d2d);
 color:#fff;
 padding:16px 12px;
 padding-top:calc(16px + env(safe-area-inset-top,0px));
 display:flex;
 align-items:center;
-box-shadow:0 2px 12px rgba(0,0,0,0.3);
+box-shadow:0 2px 12px rgba(0,0,0,0.15);
 }
 .header .title{
 flex:1;
 font-weight:700;
 font-size:17px;
-white-space:nowrap;
+whitespace:nowrap;
 overflow:hidden;
 text-overflow:ellipsis;
 display:flex;
 align-items:center;
 gap:8px;
 }
-.header .title::before{content:'💬'} /* الرمز هنا مازال موجود */
+.header .title::before{content:'💬'}
 .header .close{
 cursor:pointer;
 font-size:26px;
@@ -124,15 +116,13 @@ scroll-behavior:smooth;
 background:#ffffff;
 border-top:1px solid #e5e7eb;
 padding:12px;
-/* تقليل البادينج السفلي على الموبايل والاعتماد على السكربت لإظهاره فوق الكيبورد */
-padding-bottom:calc(12px + env(safe-area-inset-bottom, 0px));
+padding-bottom:80px;
 display:flex;
 flex-direction:column;
 gap:10px;
 box-shadow:0 -4px 16px rgba(0,0,0,0.06);
 }
 
-/* Timer Display */
 .timer-container{
 display:none;
 align-items:center;
@@ -161,7 +151,6 @@ text-align:center;
 50%{transform:scale(1.02)}
 }
 
-/* على الديسكتوب نرجع للـ padding العادي */
 @media (min-width:700px){
 .controls{
 padding-bottom:16px;
@@ -186,24 +175,24 @@ transition:border-color .2s, box-shadow .2s;
 }
 .input input:focus{
 outline:none;
-border-color:var(--accent); /* التركيز على لون الهوية الجديد */
-box-shadow:0 0 0 3px rgba(17,17,17,0.1);
+border-color:#2d2d2d;
+box-shadow:0 0 0 3px rgba(45,45,45,0.1);
 }
 .btn{
 padding:12px 24px;
 border-radius:24px;
 border:none;
-background:linear-gradient(135deg,var(--accent-2),var(--accent));
+background:linear-gradient(135deg,#2d2d2d,#1a1a1a);
 color:#fff;
 cursor:pointer;
 font-weight:600;
 min-width:80px;
-box-shadow:0 2px 8px rgba(0,0,0,0.3);
+box-shadow:0 2px 8px rgba(0,0,0,0.2);
 transition:transform .2s, box-shadow .2s;
 }
 .btn:hover{
 transform:translateY(-1px);
-box-shadow:0 4px 12px rgba(0,0,0,0.4);
+box-shadow:0 4px 12px rgba(0,0,0,0.3);
 }
 .btn:active{
 transform:translateY(0);
@@ -222,13 +211,13 @@ border:2px solid #e5e7eb;
 background:#ffffff;
 font-size:13px;
 cursor:pointer;
-color:var(--accent);
+color:#1a1a1a;
 font-weight:500;
 transition:all .2s;
 }
 .quick button:hover{
-border-color:var(--accent-2);
-background:#f0f0f0; /* خلفية hover فاتحة */
+border-color:#2d2d2d;
+background:#f9fafb;
 transform:translateY(-1px);
 }
 
@@ -244,20 +233,18 @@ from{opacity:0;transform:translateY(10px)}
 to{opacity:1;transform:translateY(0)}
 }
 
-/* رسالة المستخدم - يمين - أسود */
 .msg.user{
 align-self:flex-end;
 align-items:flex-end;
 }
 .msg.user .bubble{
-background:linear-gradient(135deg,var(--accent-2),var(--accent));
+background:linear-gradient(135deg,#2d2d2d,#1a1a1a);
 color:var(--user-text);
 border-radius:18px 18px 4px 18px;
 padding:12px 16px;
 box-shadow:var(--shadow);
 }
 
-/* رسالة البوت - شمال - رمادي فاتح */
 .msg.bot{
 align-self:flex-start;
 align-items:flex-start;
@@ -298,7 +285,6 @@ animation:dot 1.4s infinite;
 30%{opacity:1;transform:translateY(-6px) scale(1)}
 }
 
-/* Result message styling */
 .result-msg{
 background:linear-gradient(135deg, #dcfce7, #bbf7d0);
 border:2px solid #86efac;
@@ -341,13 +327,13 @@ max-height:800px;
 border-radius:16px;
 box-shadow:0 20px 60px rgba(0,0,0,0.3);
 }
-.chat-fab{right:28px;bottom:58px} /* رفع الـ FAB في الديسكتوب أيضاً */
+.chat-fab{right:28px;bottom:28px}
 }
 </style>
 </head>
 <body>
 
-<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات"></div>
+<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">💬</div>
 
 <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
 <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
@@ -394,7 +380,8 @@ const WORKER_URL = 'https://kawkab.kawkab-arabia.workers.dev/';
 let historyMessages = [], chatOpened = false, finalized = false;
 let timerInterval = null;
 let timeRemaining = 60;
-let finalDiscount = null; // لتخزين آخر خصم تم ذكره بواسطة البوت
+let timerStarted = false;
+let lastDiscountPercent = null;
 
 function postToParent(action){
 try{
@@ -416,32 +403,29 @@ area.scrollTop = area.scrollHeight;
 });
 }
 
+function extractDiscount(text){
+const match = text.match(/عرض:\s*(\d+)%/);
+if(match && match[1]){
+return parseInt(match[1], 10);
+}
+return null;
+}
+
 function append(who, text, isResult = false){
 const w = document.createElement('div');
 w.className = 'msg ' + (who === 'user' ? 'user' : 'bot');
 const b = document.createElement('div');
 b.className = isResult ? 'result-msg' : 'bubble';
-
-// 3. تخزين قيمة الخصم الأخيرة إذا تم ذكرها في رسالة البوت
-if(who === 'bot' && !isResult){
-const match = text.match(/(\d+%)/); // البحث عن أي نسبة مئوية (مثال: 15%)
-if(match){
-// يتم تخزين النص ككل، ويمكن معالجته لاحقا لاستخراج الرقم فقط
-finalDiscount = match[1];
-}
-}
-
 if(isResult){
-// 3. تطبيق الخصم النهائي
-let discountValue;
-if(finalDiscount){
-discountValue = finalDiscount; // استخدام آخر خصم ذكره البوت
-} else {
-discountValue = '5%'; // الخصم الافتراضي إذا لم يذكر البوت خصمًا
-}
-b.innerHTML = `<div class="result-title">🎉 مبروك! خصمك النهائي</div><div class="result-value">${safeText(discountValue)}</div>`;
+b.innerHTML = `<div class="result-title">🎉 مبروك! خصمك النهائي</div><div class="result-value">${safeText(text)}</div>`;
 } else {
 b.innerHTML = safeText(text);
+if(who === 'bot'){
+const discount = extractDiscount(text);
+if(discount !== null){
+lastDiscountPercent = discount;
+}
+}
 }
 w.appendChild(b);
 if(!isResult){
@@ -465,9 +449,9 @@ scrollToBottom();
 return el;
 }
 
-// 2. تعديل لبدء العداد
 function startTimer(){
-if(timerInterval) return;
+if(timerInterval || timerStarted) return;
+timerStarted = true;
 timeRemaining = 60;
 timerContainer.classList.add('active');
 timerDisplay.textContent = timeRemaining;
@@ -489,7 +473,6 @@ timerInterval = null;
 timerContainer.classList.remove('active');
 }
 
-// 3. تعديل دالة الخصم النهائي
 function finalize(){
 if(finalized) return;
 finalized = true;
@@ -497,35 +480,31 @@ stopTimer();
 btn.disabled = true;
 inp.disabled = true;
 quick.style.display = 'none';
-
-let finalMsg = finalDiscount ?
-`شكراً ليك! تم حفظ عرض ${finalDiscount} وهنتواصل معاك قريب جداً 🎊` :
-'شكراً ليك! تم حفظ عرض 5% (الخصم الافتراضي) وهنتواصل معاك قريب جداً 🎊';
-
+const finalDiscount = lastDiscountPercent !== null ? lastDiscountPercent : 5;
 setTimeout(()=>{
-append('bot', finalDiscount || '5%', true); // عرض النتيجة النهائية
+append('bot', `${finalDiscount}%`, true);
 setTimeout(()=>{
-append('bot', finalMsg);
+append('bot', 'شكراً ليك! تم حفظ العرض وهنتواصل معاك قريب جداً 🎊');
 }, 1000);
 }, 500);
 }
 
-// 5. التأكد من ظهور الـ input لما يفتح الكيبورد
-// تم تعديل هذا الجزء في الـ CSS و هنا لضمان عمله
 inp.addEventListener('focus', ()=>{
 setTimeout(()=>{
-// لا حاجة لـ scrollIntoView هنا في أغلب المتصفحات الحديثة بسبب الـ viewport-fit=cover
-// ولكن نتركها كاحتياط
-area.scrollTop = area.scrollHeight; // Scroll to bottom on focus
+const controls = document.querySelector('.controls');
+if(controls){
+controls.scrollIntoView({behavior:'smooth', block:'nearest'});
+}
 }, 300);
 });
 
-// 5. مراقبة تغيير حجم الشاشة (الكيبورد)
 if(window.visualViewport){
 window.visualViewport.addEventListener('resize', ()=>{
-// تأكد من أن منطقة الرسائل تتحرك لتجنب حجبها
 setTimeout(()=>{
-area.scrollTop = area.scrollHeight;
+const controls = document.querySelector('.controls');
+if(controls){
+controls.scrollIntoView({behavior:'smooth', block:'end'});
+}
 }, 100);
 });
 }
@@ -535,10 +514,7 @@ overlay.classList.add('show');
 overlay.setAttribute('aria-hidden', 'false');
 openBtn.classList.add('hidden');
 if(!chatOpened){
-// 2. لا تبدأ العداد هنا
 append('bot', 'أهلاً بيك في بوت كوكب! 🎉 قولّي إنت عايز تفاوض على إيه؟ 😎');
-// 2. ابدأ العداد بعد رسالة البوت الأولى
-startTimer();
 chatOpened = true;
 }
 postToParent('chatOpened');
@@ -595,6 +571,9 @@ const j = await res.json().catch(()=> ({}));
 const reply = j.text || j.reply || 'مش فاهمك قوي 😅 جرب تاني';
 append('bot', reply);
 historyMessages.push({role:'user', content: txt}, {role:'assistant', content: reply});
+if(!timerStarted && historyMessages.length >= 2){
+startTimer();
+}
 }
 }catch(e){
 try{ typing.remove(); }catch(_){}
